@@ -100,6 +100,8 @@ The following bugs are resolved with this release:
   [28953] nss: Protect against errno changes in function lookup
   [29029] nptl: poll() spuriously returns EINTR during thread
     cancellation and with cancellation disabled
+  [29069] libc: fstatat64_time64_statx wrapper broken on MIPS N32 with
+    -D_FILE_OFFSET_BITS=64 and -D_TIME_BITS=64
 
 
 Version 2.34
